sgd/reproduction/playground/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActivityPlace__c</fullName>
        <inlineHelpText>社内：メール、電話、Web会議

社外：顧客訪問

その他：GP勤務</inlineHelpText>
        <label>活動場所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>社内</fullName>
                </value>
                <value>
                    <fullName>社外</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>用途名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Evaluation__c</fullName>
        <label>競合情報　STEC評価</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>プラス要素</fullName>
                </value>
                <value>
                    <fullName>マイナス要素</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplaintSheetNo__c</fullName>
        <label>ComplaintSheetNo.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dead_Line_MS__c</fullName>
        <label>上長　期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dead_Line__c</fullName>
        <label>TL　期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Egg_Information_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>顧客から得た情報で開発にもシェアしたい内容の場合はここにCheck!</inlineHelpText>
        <label>開発情報共有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EigyoGroup__c</fullName>
        <formula>Owner:User.EigyoGroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTeam__c</fullName>
        <formula>Owner:User.EigyoTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業チーム</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutiveCommitteeReport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>共有が必要であればMS/TLが「幹部会報告」チェックをする。</inlineHelpText>
        <label>幹部会報告</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>用途詳細</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>市場</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IC-SEMI</fullName>
                </value>
                <value>
                    <fullName>IC-SEMI(200mm)</fullName>
                </value>
                <value>
                    <fullName>Non-IC-SEMI</fullName>
                </value>
                <value>
                    <fullName>コーティング</fullName>
                </value>
                <value>
                    <fullName>バイオ</fullName>
                </value>
                <value>
                    <fullName>医療</fullName>
                </value>
                <value>
                    <fullName>製薬・化粧品</fullName>
                </value>
                <value>
                    <fullName>食品</fullName>
                </value>
                <value>
                    <fullName>燃料電池</fullName>
                </value>
                <value>
                    <fullName>二次電池</fullName>
                </value>
                <value>
                    <fullName>新素材・繊維</fullName>
                </value>
                <value>
                    <fullName>自動車</fullName>
                </value>
                <value>
                    <fullName>環境</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <inlineHelpText>・新規顧客へのPR訪問は「仕掛け」と考えない 
・新規引き合いに対する顧客訪問は「仕掛け」には入れない 
※但し、上記2件は、上のようなコミュニケーションをプラスで行った場合は「仕掛け」と考える</inlineHelpText>
        <label>仕掛けカテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trigger__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>競合奪取</fullName>
                </value>
                <value>
                    <fullName>困り事解決提案</fullName>
                </value>
                <value>
                    <fullName>採用促進提案</fullName>
                </value>
                <value>
                    <fullName>新規アプリケーション開拓</fullName>
                </value>
                <value>
                    <fullName>システム提案</fullName>
                </value>
                <value>
                    <fullName>HOR製品追加紹介</fullName>
                </value>
                <value>
                    <fullName>技術交流会/セミナー</fullName>
                </value>
                <value>
                    <fullName>新規開拓</fullName>
                </value>
                <value>
                    <fullName>新規市場開拓</fullName>
                </value>
                <value>
                    <fullName>他製品プラス提案</fullName>
                </value>
                <value>
                    <fullName>デモ・評価提案</fullName>
                </value>
                <value>
                    <fullName>トップセールス、Push/Pull</fullName>
                </value>
                <value>
                    <fullName>リプレイス提案</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HVP_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVP FLG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISWreport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>海外メンバに対して共有したいレポートがある時にこのチェックBoxを入れる</description>
        <label>ISW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Importantitem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>各部の重点課題に関するレポート時にチェックを入れます。</description>
        <label>重点課題</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_detail__c</fullName>
        <description>訪問目的で情報収集を選択した際に選択します</description>
        <label>情報収集内容</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ISWreport__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>投資情報</fullName>
                </value>
                <value>
                    <fullName>フォーキャスト</fullName>
                </value>
                <value>
                    <fullName>技術情報</fullName>
                </value>
                <value>
                    <fullName>ニーズ確認</fullName>
                </value>
                <value>
                    <fullName>競合情報</fullName>
                </value>
                <value>
                    <fullName>Push/Pull</fullName>
                </value>
                <value>
                    <fullName>新規受注</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquirysheet__c</fullName>
        <label>見積提出</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>要</fullName>
                </value>
                <value>
                    <fullName>不要</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsideSales__c</fullName>
        <formula>IF(LEFT( WhatId , 3 ) &lt;&gt; &quot;006&quot; ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>インサイド対応中</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kakunin_Honbu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>本部長確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeaderReport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>メンバーは上長に確認してほしい場合には「上長報告」にチェックを入れる。</inlineHelpText>
        <label>上長報告</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MSは「上長報告」チェックされたもののみ確認を行い、
確認したらチェックする。
必要に応じて、指示/確認はChatterで連絡。</inlineHelpText>
        <label>MS確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MSは「上長報告」チェックされたもののみ確認を行い、
確認したらチェックする。
必要に応じて、指示/確認はChatterで連絡。</inlineHelpText>
        <label>MS確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerCommnent__c</fullName>
        <label>上長コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Seeds__c</fullName>
        <label>潜在要素</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>新製品拡販</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextAction__c</fullName>
        <label>担当者 返信</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OJTreport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>先輩社員と同行した時に学んだことを記載し、チェックを入れます</description>
        <label>OJTレポート</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldLocationOwner__c</fullName>
        <description>旧環境から新環境へのデータ移行の際に所有者が割り当てられず、所有者を田中様に設定した際に、旧環境の所有者名を格納する</description>
        <label>旧環境所有者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldSFId__c</fullName>
        <label>※※※一時用　旧環境SFID　削除必須※※※</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_point__c</fullName>
        <label>仕掛けポイント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>問題点</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_list__c</fullName>
        <description>訪問目的で仕様打合せ・製品PR・提案・見積・フォロー・トラブル・納期・立会いを選択した際に何の製品群かを選びます</description>
        <label>製品群</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>全般</fullName>
                </value>
                <value>
                    <fullName>MFC</fullName>
                </value>
                <value>
                    <fullName>真空</fullName>
                </value>
                <value>
                    <fullName>装置</fullName>
                </value>
                <value>
                    <fullName>液体</fullName>
                </value>
                <value>
                    <fullName>供給器</fullName>
                </value>
                <value>
                    <fullName>気化器</fullName>
                </value>
                <value>
                    <fullName>DR製品</fullName>
                </value>
                <value>
                    <fullName>HOR製品</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RivalAmount__c</fullName>
        <label>競合価格</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RivalCompany__c</fullName>
        <label>競合情報</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RivalMaker__c</fullName>
        <label>競合メーカー</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Azbil</fullName>
                </value>
                <value>
                    <fullName>Bronkhorst</fullName>
                </value>
                <value>
                    <fullName>Brooks</fullName>
                </value>
                <value>
                    <fullName>CKD</fullName>
                </value>
                <value>
                    <fullName>Fujikin</fullName>
                </value>
                <value>
                    <fullName>HMA</fullName>
                </value>
                <value>
                    <fullName>HMS</fullName>
                </value>
                <value>
                    <fullName>Kofloc</fullName>
                </value>
                <value>
                    <fullName>Lintec</fullName>
                </value>
                <value>
                    <fullName>MKS</fullName>
                </value>
                <value>
                    <fullName>OVAL</fullName>
                </value>
                <value>
                    <fullName>Tokyo keiso</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>Inficon</fullName>
                </value>
                <value>
                    <fullName>ANELVA</fullName>
                </value>
                <value>
                    <fullName>ULVAC</fullName>
                </value>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RivalModel__c</fullName>
        <label>競合型式</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RivalMaker__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SFC1460F</fullName>
                </value>
                <value>
                    <fullName>SFC1480F</fullName>
                </value>
                <value>
                    <fullName>SFC1481F</fullName>
                </value>
                <value>
                    <fullName>SFC1482F</fullName>
                </value>
                <value>
                    <fullName>SFC1470F</fullName>
                </value>
                <value>
                    <fullName>SFC1471F</fullName>
                </value>
                <value>
                    <fullName>SFC1472F</fullName>
                </value>
                <value>
                    <fullName>SFC1580F</fullName>
                </value>
                <value>
                    <fullName>SFC1680F</fullName>
                </value>
                <value>
                    <fullName>SFC1581F</fullName>
                </value>
                <value>
                    <fullName>SFC1681F</fullName>
                </value>
                <value>
                    <fullName>SFC1582F</fullName>
                </value>
                <value>
                    <fullName>SFC1682F</fullName>
                </value>
                <value>
                    <fullName>SFC1570F</fullName>
                </value>
                <value>
                    <fullName>SFC1670F</fullName>
                </value>
                <value>
                    <fullName>SFC1571F</fullName>
                </value>
                <value>
                    <fullName>SFC1671F</fullName>
                </value>
                <value>
                    <fullName>SFC1572F</fullName>
                </value>
                <value>
                    <fullName>SFC1672F</fullName>
                </value>
                <value>
                    <fullName>FMT1460F</fullName>
                </value>
                <value>
                    <fullName>FMT1480F</fullName>
                </value>
                <value>
                    <fullName>FMT1481F</fullName>
                </value>
                <value>
                    <fullName>FMT1482F</fullName>
                </value>
                <value>
                    <fullName>FMT1580F</fullName>
                </value>
                <value>
                    <fullName>FMT1680F</fullName>
                </value>
                <value>
                    <fullName>FMT1581F</fullName>
                </value>
                <value>
                    <fullName>FMT1681F</fullName>
                </value>
                <value>
                    <fullName>FMT1582F</fullName>
                </value>
                <value>
                    <fullName>FMT1682F</fullName>
                </value>
                <value>
                    <fullName>SFC1480G1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RivalSales__c</fullName>
        <label>競合営業情報</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Comments__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>STEC__c</fullName>
        <label>STEC採用理由</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Time_Total__c</fullName>
        <description>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</description>
        <inlineHelpText>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</inlineHelpText>
        <label>Total Break Time (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time_Home__c</fullName>
        <description>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</description>
        <inlineHelpText>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</inlineHelpText>
        <label>Travel Time Back to Home Base (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <description>Driving or travel time to this work order location from the last work order location or from the home base.</description>
        <inlineHelpText>Driving or travel time to this work order location from the last work order location or from the home base.</inlineHelpText>
        <label>Travel Time to Workorder Location (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_After__c</fullName>
        <description>Total overhead or flex time at the end of the service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time at the end of the service at the work order location.</inlineHelpText>
        <label>Overhead Time at End of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_Before__c</fullName>
        <description>Total overhead or flex time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Overhead Time at Start of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Idle_Time__c</fullName>
        <description>Idle time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Idle time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Idle Time for the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Latitude__c</fullName>
        <description>This field is created to store the latitude of the non work order events of the technicians.</description>
        <inlineHelpText>This field is created to store the latitude of the non work order events of the technicians.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Longitude__c</fullName>
        <description>This field is created to store the longitude of the non work order events of the technicians.</description>
        <inlineHelpText>This field is created to store the longitude of the non work order events of the technicians.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
        <description>This field is used to store the date and time of the message generated by the external optimization system that is successfully processed in ServiceMax . The date and time stamp is when the message was created by the external optimization system and sent to ServiceMax.</description>
        <label>Optimizer Message Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Status__c</fullName>
        <description>This field is used to store scheduling status</description>
        <inlineHelpText>This field is used to store scheduling status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Non-optimizable</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Duration__c</fullName>
        <description>Total service time, which is the wrench time of the service</description>
        <inlineHelpText>Total service time or the wrench time of the service.</inlineHelpText>
        <label>Service Time (in Seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOrganize1__c</fullName>
        <formula>Owner:User.SalesOrganize1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売組織１</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganize2__c</fullName>
        <formula>Owner:User.SalesOrganize2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売組織２</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_share_information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>装置拡販情報共有</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TLCommnent__c</fullName>
        <label>TLコメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TLConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TLは「上長報告」チェックされたもののみ確認を行い、
確認したらチェックする。
必要に応じて、指示/確認はChatterで連絡。</inlineHelpText>
        <label>TL確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TLは「上長報告」チェックされたもののみ確認を行い、
確認したらチェックする。
必要に応じて、指示/確認はChatterで連絡。</inlineHelpText>
        <label>TL確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Category__c</fullName>
        <description>取引先のチームカテゴリを参照</description>
        <formula>text(Account.Team_Category_del__c)</formula>
        <label>Team Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <inlineHelpText>インプットする内容がどの技術に関連するかを選択します。</inlineHelpText>
        <label>技術</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>流量</fullName>
                </value>
                <value>
                    <fullName>圧力</fullName>
                </value>
                <value>
                    <fullName>濃度</fullName>
                </value>
                <value>
                    <fullName>温度</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TempUserID__c</fullName>
        <label>※※※一時用　所有者ユーザID　削除必須※※※</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>トピックス</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>仕掛け</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitPurpose__c</fullName>
        <label>訪問目的</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>仕様打合せ</fullName>
                    <color>#0B6FCE</color>
                    <label>仕様打合せ</label>
                </value>
                <value>
                    <fullName>製品PR</fullName>
                    <color>#78C953</color>
                    <label>製品PR</label>
                </value>
                <value>
                    <fullName>提案提示</fullName>
                    <color>#E27001</color>
                    <label>提案提示</label>
                </value>
                <value>
                    <fullName>案件フォロー</fullName>
                    <color>#A845DC</color>
                    <label>案件フォロー</label>
                </value>
                <value>
                    <fullName>情報収集</fullName>
                    <color>#F3D904</color>
                    <label>情報収集</label>
                </value>
                <value>
                    <fullName>表敬訪問</fullName>
                    <color>#A53711</color>
                    <label>表敬訪問</label>
                </value>
                <value>
                    <fullName>不具合対応</fullName>
                    <color>#66E9BD</color>
                    <label>不具合対応</label>
                </value>
                <value>
                    <fullName>現地作業</fullName>
                    <color>#0B24BE</color>
                    <label>現地作業</label>
                </value>
                <value>
                    <fullName>立会試験</fullName>
                    <color>#419249</color>
                    <label>立会試験</label>
                </value>
                <value>
                    <fullName>監査</fullName>
                    <color>#B6E32E</color>
                    <label>監査</label>
                </value>
                <value>
                    <fullName>工場見学</fullName>
                    <color>#641CCF</color>
                    <label>工場見学</label>
                </value>
                <value>
                    <fullName>挨拶</fullName>
                    <color>#F96FB7</color>
                    <label>挨拶</label>
                </value>
                <value>
                    <fullName>拡販</fullName>
                    <color>#2F5D85</color>
                    <label>拡販</label>
                </value>
                <value>
                    <fullName>セミナー</fullName>
                    <color>#AFCADF</color>
                    <label>セミナー</label>
                </value>
                <value>
                    <fullName>会議</fullName>
                    <color>#8F6429</color>
                    <label>会議</label>
                </value>
                <value>
                    <fullName>定例会議</fullName>
                    <color>#EFAE73</color>
                    <label>定例会議</label>
                </value>
                <value>
                    <fullName>資料作成</fullName>
                    <color>#57F17C</color>
                    <label>資料作成</label>
                </value>
                <value>
                    <fullName>問合せ対応</fullName>
                    <color>#0B6FCE</color>
                    <label>問合せ対応</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>customerCategory__c</fullName>
        <label>客先分類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>特約店</fullName>
                </value>
                <value>
                    <fullName>エンドユーザー</fullName>
                </value>
                <value>
                    <fullName>装置メーカー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>deveroper_commnet__c</fullName>
        <description>開発からの質問、コメントを入れるテキストBOXです</description>
        <label>開発コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>industryType__c</fullName>
        <label>業種</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>製造業</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>私の活動</label>
    </listViews>
    <listViews>
        <fullName>MyActivitiesLastWeek</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>10.私の先週の活動</label>
    </listViews>
    <listViews>
        <fullName>MyActivitiesNextWeek</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>30.私の来週の活動</label>
    </listViews>
    <listViews>
        <fullName>MyActivitiesThisWeek</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>20.私の今週の活動</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Team</filterScope>
        <label>私のチームの訪問</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>